# LogJam

./: .gitignore  ChangeLog  ChangeLog.old  Makefile.am  acinclude.m4  autogen.sh  configure.in  index.html
data/: Makefile.am  logjam.desktop.in
data/mockups/: logjam.glade
dev/: index.html
doc/: Makefile.am  README  README.structuredtext  README.win32  TODO
download/: index.html  logjam-4.5.3.tar.bz2  logjam-4.6.1.tar.bz2  logjam-4.6.2.tar.bz2
images/: Makefile.am  build-build-win32.sh  build.bat  inline-images.rb  inline.h
patches/: logjam-4.2.4-extcmd.patch
po/: POTFILES.in  completion.pl  de.po  en_GB.po  en_US.UTF-8.po  es.po  he.po  ja.po  ru_RU.po  uk_UA.po  update-potfiles.sh  valmenu.pl
po/utf8/: makeutf8  utf8.sed
protocol/: Makefile.am
protocol/blogger/: Makefile.am  blogger.c  blogger.gxr  blogger.h
protocol/liblivejournal/: ChangeLog  Makefile.am  README  acinclude.m4  autogen.sh  configure.in
protocol/liblivejournal/docs/: Makefile.am  liblivejournal-docs.sgml  liblivejournal-sections.txt  liblivejournal-undocumented.txt
protocol/liblivejournal/docs/tmpl/: checkfriends.sgml  consolecommand.sgml  editfriendgroups.sgml  editfriends.sgml  editpostevent.sgml  entry.sgml  friends.sgml  getchallenge.sgml  getevents.sgml  getfriends.sgml  liblivejournal-unused.sgml  livejournal.sgml  login.sgml  md5.sgml  protocol.sgml  serveruser.sgml  sync.sgml  syncitems.sgml  types.sgml  verb.sgml
protocol/liblivejournal/livejournal/: Makefile.am  checkfriends.c  checkfriends.h  consolecommand.c  consolecommand.h  editfriendgroups.c  editfriendgroups.h  editfriends.c  editfriends.h  editpostevent.c  editpostevent.h  entry.c  entry.h  friends.h  getchallenge.c  getchallenge.h  getevents.c  getevents.h  getfriends.c  getfriends.h  gettags.c  gettags.h  livejournal.h  login.c  login.h  md5.c  md5.h  protocol.c  protocol.h  serveruser.c  serveruser.h  sync.c  sync.h  syncitems.c  syncitems.h  tags.h  types.c  types.h  verb.c  verb.h
protocol/liblivejournal/tests/: Makefile.am  curl.c  curl.h  escape.c  login.c  request.c
site/: style.css
src/: Makefile.am  about.c  about.h  account.c  account.h  blogger.c  checkfriends-gtk.c  checkfriends.c  checkfriends.h  cmdline.c  cmdline.h  conf.c  conf.h  conf_xml.c  conf_xml.h  config-win32.h  console.c  console.h  datesel.c  datesel.h  docklet.c  draftstore.c  draftstore.h  draftstore_ui.c  eggtrayicon.c  eggtrayicon.h  foldbox.c  foldbox.h  friendedit.c  friendedit.h  friendgroupedit.c  friendgroupedit.h  friendgroups.c  friendgroups.h  friends.c  friends.h  genmarshal  get_cmd_out.c  get_cmd_out.h  getopt.c  (+99 more)
src/dash/: dashboard-frontend.c  dashboard-frontend.h
tour/: index.html
util/: Makefile.am
util/bansheeclient/: Makefile.am  logjam-banshee-client
util/gxr/: Makefile.am  README.gxr  gxr-gen.rb  gxr-internal.h  gxr.c  gxr.h
util/xmmsclient/: Makefile.am  logjam-xmms-client.c
util/zsh/: _logjam
